--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,8 @@
 version: "3.9"
 services:
+  ### ===================
+  ### APP SERVICE
+  ### ===================
   app:
     build:
       dockerfile: dev.Dockerfile
@@ -11,6 +14,10 @@ services:
       - mysql
     volumes:
       - ./app:/app
+
+  ### ===================
+  ### DB SERVICE
+  ### ===================
   mysql:
     image: mysql:5.7
     container_name: pos_mysql
@@ -20,10 +27,26 @@ services:
       - 3306:3306
     environment:
       - MYSQL_DATABASE=${DB_NAME}
-      - MYSQL_USER=${DB_USER}
+      - MYSQL_USER=${DB_USERNAME}
       - MYSQL_PASSWORD=password
       - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
     healthcheck:
       test: ["CMD","mysqladmin","ping","-h","localhost"]
       timeout: 5s
       retries: 10
+
+### ===================
+### SWAGGER SERVICE
+### ===================
+  doc:
+    build: 
+      context: .
+      dockerfile: swagger/Dockerfile
+    container_name: doc_pos_api
+    environment:
+      - URL=http://localhost:9090/api-spec
+      - SWAGGER_JSON=/API-SPEC.json
+    volumes:
+      - ./API-SPEC.json:/API-SPEC.json
+    ports:
+      - 9090:8080
